# starling_testing_ws

./: .gitignore  NCSA_COMMANDS.md  README.md  dependencies.repos  setup_guide.md
patches/: px4_ros2_voxl_unversioned_topics.patch
scripts/: setup_workspace.sh
src/llm_vision_planner/: CMakeLists.txt  HARDWARE_TESTING_README.md  package.xml
src/llm_vision_planner/config/: llm_vision_planner.yaml
src/llm_vision_planner/fine_tuning/: README.md
src/llm_vision_planner/fine_tuning/scripts/: dataset_generator.py  rrt.py  train.py  train_peft.py  train_peft_lora.sbatch  train_rrt_lora.sbatch
src/llm_vision_planner/launch/: full_plot.launch.py
src/llm_vision_planner/scripts/: llm_planner.py  mission_takeoff.py  perception.py  perception_detection.py  prompt_generator.py  refinment.py  trajectory_follower.py  trajectory_follower_continuous.py  verifier.py  visualize.py
src/llm_vision_planner/src/: trajectory_follower.cpp
src/papers/: llm_augmented_uav_route_planning_report.tex  report.tex
src/papers/report/: README.md  llm_augmented_uav_route_planning_report.aux  llm_augmented_uav_route_planning_report.out  llm_augmented_uav_route_planning_report.tex  per_trial_logs.jsonl  predictions.md  results_artifact.csv  submission_checklist.md
src/starling_testing/: CMakeLists.txt  package.xml
src/starling_testing/flight_logs/: log_201_2026-5-26-18-45-25.ulg  log_221_2026-5-26-21-47-23.ulg
src/starling_testing/params/: indoor_vio_missing_gps.params  parameters.bak
src/starling_testing/scripts/: 01_takeoff_land.py  02_fmu_trajectory_waypoint.py  02_offboard_waypoint.py  03_bezier_offboard_waypoint.py  03_px4_ros2_goto_waypoint.py  run_voxl_sequence.sh
src/starling_testing/src/: 04_px4_ros2_goto_waypoint.cpp  05_px4_ros2_goto_mission.cpp
